--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/index.css" rel="stylesheet">
-    <title>Hello, Scala.js!</title>
+    <link href="node_modules/tippy.js/dist/tippy.css" rel="stylesheet">
+    <title>State of Scala platform</title>
   </head>
   <body>
     <center>
-      <h1>Hello Scala.js</h1>
+      <h1>Individual modules in Scala ecosystem published for JVM and Native (0.5 and 0.4)</h1>
+    <p>Search by github org, repo, maven org, or artifact name</p>
+    <input type = "text" placeholder="search..." id = "search-input" class = "search" />
     </center>
     <div id="content"></div>
     <script type="module" src="/scalajs-frontend.js"></script>
