--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <h1>Individual modules in Scala ecosystem published for JVM and Native (0.5 and 0.4)</h1>
     <p>Search by github org, repo, maven org, or artifact name</p>
     <input type = "text" placeholder="search..." id = "search-input" class = "search" />
+    <p>Each square represents and individual artifact. Artifacts are sorted by the 
+    number of stars in the github repository according to Scaladex.</p>
     </center>
     <div id="content"></div>
     <script type="module" src="/scalajs-frontend.js"></script>
